--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -161,7 +161,7 @@
                   </div>
                 </div>
                 <p class="mt-3 mb-0 text-muted text-sm">
-                  <a [routerLink]="['/subjects']"><span class="text-warning mr-2"><i class="fa fa-arrow-right"></i> View</span></a>
+                  <a [routerLink]="['/subject']"><span class="text-warning mr-2"><i class="fa fa-arrow-right"></i> View</span></a>
                 </p>
               </div>
             </div>
@@ -227,7 +227,7 @@
                 </div>
               </div>
             </div>
-          <div class="col-xl-3 col-md-6">
+          <div class="col-xl-3 col-md-6" *ngIf="!isAdmin">
             <div class="card card-stats shadow mb-4 mb-xl-0">
               <div class="card-body">
                 <div class="row">
@@ -247,9 +247,29 @@
               </div>
             </div>
           </div>
+          <div class="col-xl-3 col-md-6" *ngIf="isAdmin">
+              <div class="card card-stats shadow mb-4 mb-xl-0">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col">
+                      <h5 class="card-title text-uppercase text-muted mb-0">Notices</h5>
+                      <span class="h2 font-weight-bold mb-0"><!--13--></span>
+                    </div>
+                    <div class="col-auto">
+                      <div class="icon icon-shape bg-info text-white rounded-circle shadow">
+                        <i class="fas fa-bullhorn"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <p class="mt-3 mb-0 text-muted text-sm">
+                    <a [routerLink]="['/notices']"><span class="text-warning mr-2"><i class="fa fa-arrow-right"></i> View</span></a>
+                  </p>
+                </div>
+              </div>
+            </div>
         </div>
         <div class="row pt-5">
-          <div class="col-xl-3 col-md-6" *ngIf="!isTeacher">
+          <div class="col-xl-3 col-md-6" *ngIf="!isTeacher && !isAdmin">
             <div class="card card-stats shadow mb-4 mb-xl-0">
               <div class="card-body">
                 <div class="row">
@@ -269,7 +289,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-6" *ngIf="!isTeacher">
+          <div class="col-xl-3 col-md-6" *ngIf="!isTeacher && !isAdmin">
             <div class="card card-stats shadow mb-4 mb-xl-0">
               <div class="card-body">
                 <div class="row">
