--- a/src/app/components/time-table/time-table.component.html
+++ b/src/app/components/time-table/time-table.component.html
@@ -1,7 +1,7 @@
 <div class="container my-4" *ngIf="isStudent || isParent || isTeacher">
   <div class="card shadow">
     <div class="card-body">
-      <h2>TimeTable <span *ngIf="isStudent || isParent">For Class {{data[0].class.grade + data[0].class.sub_class }}</span></h2>
+      <h2>TimeTable</h2>
       <!-- <div class="row text-center">
         <div class="col-md-4">
           <div class="btn-group">
